# KAN-GLNet

./: .gitignore  pyproject.toml  run_interference.py  setup.py  test_semseg.py  train_semseg.py
data_utils/: offDataLoader.py  pcdDataLoader.py
models/: pointnet2_sem_seg.py  pointnet2_utils.py
utils/: provider.py
